--- a/style.css
+++ b/style.css
@@ -3,11 +3,6 @@ background-color: rgb(46, 45, 46);
 color: white;
 }
 
-hr {
-    color: gold;
-    border-bottom-style: dashed;
-}
-
 h1 {
     font-family: 'Courier New', Courier, monospace;
     color: gold;
@@ -26,4 +21,11 @@ p {
 
 img {
     align-items: center;
+}
+
+hr {
+    background-color: gold;
+    border-style: none;
+    border-top-style: dashed;
+    width: 30%;
 }
